--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc} 
 \usepackage{fdsymbol}
 \usepackage{amsmath}
+\usepackage{ntheorem}
 \usepackage{tensor}
 \usepackage[italicdiff]{physics}
 %\usepackage{mathtools}
@@ -13,7 +14,9 @@
 \usepackage {graphicx} 
 %\newcommand{\edal}{\end{align}}
 %\newcommand{\bgal}{\begin{align}\end{align}}
-\newtheorem{theorem}{Theorem}
+%\newtheorem{theorem}{Theorem}
+\newtheorem{lemma}{Lemma}
+\renewcommand\thelemma{\unskip}
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
 \counterwithin*{equation}{subsection}
@@ -26,7 +29,7 @@
 
 \author{Bernard Carrette}
 \gradyear{2020}
-\title{Tensor Calculus\\J.L. Synge and A.Shild (Dover Publication)\\ Solutions to exercices}
+\title{Tensor Calculus\\J.L. Synge and A.Shild (Dover Publication)\\ Solutions to exercises}
 \begin{document}
 \maketitle
 
