--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,8 @@
 %\newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \renewcommand\thelemma{\unskip}
+\newcommand{\christ}[3]{\ensuremath{\Gamma^{#1}_{#2#3}}}
+\newcommand{\half}{\ensuremath{\frac{1}{2}}}
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
 \counterwithin*{equation}{subsection}
