--- a/main.tex
+++ b/main.tex
@@ -1,17 +1,18 @@
 \documentclass{ut-thesis}
-
+\usepackage{mathtools}
 \usepackage[utf8]{inputenc} 
 \usepackage{fdsymbol}
-\usepackage{amsmath}
+%\usepackage{txfonts}
 \usepackage{ntheorem}
 \usepackage{tensor}
+%\usepackage{physics}
 \usepackage[italicdiff]{physics}
 %\usepackage{mathtools}
 
 \usepackage{tcolorbox}
 \usepackage{chngcntr}
 \usepackage{titlesec}
-\usepackage {graphicx} 
+\usepackage {graphicx,float} 
 %\newcommand{\edal}{\end{align}}
 %\newcommand{\bgal}{\begin{align}\end{align}}
 %\newtheorem{theorem}{Theorem}
