--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,8 @@
 \renewcommand\thelemma{\unskip}
 \newcommand{\christ}[3]{\ensuremath{\Gamma^{#1}_{#2#3}}}
 \newcommand{\half}{\ensuremath{\frac{1}{2}}}
+\newcommand\del{\overline{\boldsymbol{{\triangledown}}}}
+\newcommand\maal{\boldsymbol{\times}}
 \counterwithin*{equation}{chapter}
 \counterwithin*{equation}{section}
 \counterwithin*{equation}{subsection}
